A really messy version of a ministory, with two fixed-like elements and a rectancle that scrolls behind it

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,25 @@
 
 #intro1inner {
     background-color: grey;
-    height: 571px;
+    height: 726px;
     width: 100%;
     overflow: auto;
 }
 
 #intro1a {
     position: absolute;
-    top: 30px;
-    background-color: blue;
+    top: 120px;
+    background-color: dodgerblue;
 }
 
 #intro1b {
     position: absolute;
-    top: 200px;
-    background-color: green;
+    margin: 0px auto;
+    max-width: 956px;
+    margin-left: -478px;
+    left: 50%;
+    top: 400px;
+    background-color: gold;
 }
 
 #intro3 {
@@ -55,10 +59,11 @@
 }
 
 .paraheader{
-    padding-left: 20%;
     font-family: "Bevan";
     font-style: normal;
+    box-sizing: content-box;
     font-weight: 700;
+    padding-left: 20%;
     font-size: 24px;
     font-size: 1.5rem;
     line-height: 28px;
@@ -71,7 +76,8 @@
 }
 
 .paragraph {
-	max-width: 700px;
+	box-sizing: content-box;
+    max-width: 700px;
 	padding-left: 20%;
 	font-family: "Droid+Serif";
     font-weight: 400;
